--- a/_assets/sass/components/content/_posts-and-pages.scss
+++ b/_assets/sass/components/content/_posts-and-pages.scss
@@ -195,6 +195,16 @@ h2.entry-title {
 	background-size: cover;
 	background-position:	center center;
 
+	.mask {
+		width: 100%;
+		height: 100%;
+		background-color: #243741;
+		opacity: 0.8;
+
+		.home & {
+			opacity: 0;
+		}
+	}
 }
 
 /** SLANT **/
