--- a/_assets/sass/components/widgets/_widgets.scss
+++ b/_assets/sass/components/widgets/_widgets.scss
@@ -5,4 +5,17 @@
 	select {
 		max-width: 100%;
 	}
+
+	.subtitle {
+		color: $yellow;
+		font-size: 1em;
+		letter-spacing: 6px;
+		text-transform: uppercase;
+		padding-bottom: 0;
+		margin-bottom: 0;
+	}
+}
+
+.widget-area {
+	padding-top: 6em;
 }
