--- a/style.css
+++ b/style.css
@@ -371,7 +371,8 @@ h3,
 h4,
 h5,
 h6 {
-  clear: both; }
+  clear: both;
+  margin-top: 0; }
 
 p {
   margin: 0 0 1.5em; }
@@ -759,10 +760,14 @@ button.site-nav__btn {
 /* Posts and pages
 --------------------------------------------- */
 .site-main {
-  padding-top: 5em; }
+  padding-top: 5em;
+  /** PAGE/POST COLUMN MODIFIERS **/ }
   @media (min-width: 900px) {
     .site-main {
       padding-top: 13.5em; } }
+  .site-main .narrow {
+    max-width: 40.25em;
+    margin: 0 auto; }
 
 .sticky {
   display: block; }
@@ -776,10 +781,28 @@ button.site-nav__btn {
 .updated:not(.published) {
   display: none; }
 
+.entry-header {
+  padding-top: 1.5em; }
+
 .page-content,
 .entry-content,
 .entry-summary {
   margin: 1.5em 0 0; }
+  .page-content h3,
+  .entry-content h3,
+  .entry-summary h3 {
+    font-size: 1.714em;
+    letter-spacing: 1.5px;
+    line-height: normal;
+    color: #f7bf3b; }
+  .page-content .subtitle,
+  .entry-content .subtitle,
+  .entry-summary .subtitle {
+    font-size: 1em;
+    letter-spacing: 1.81px;
+    position: absolute;
+    top: 0;
+    left: 0; }
 
 .page-links {
   clear: both;
@@ -815,10 +838,14 @@ button.site-nav__btn {
   @media screen and (min-width: 900px) {
     .articles-wrapper .post {
       width: 30%; } }
+  .articles-wrapper .post a {
+    text-decoration: none; }
   .articles-wrapper .post .content {
     position: relative;
     padding: 1.5em 1.786em 1.786em;
     height: 100%; }
+    .articles-wrapper .post .content .entry-header {
+      padding-top: 0; }
   @media screen and (min-width: 600px) {
     .articles-wrapper .post.has-post-thumbnail {
       width: 100%; } }
@@ -872,8 +899,8 @@ button.site-nav__btn {
 .articles-wrapper .vcard {
   font-weight: bold; }
 
-.articles-wrapper .cats-tags {
-  padding-top: 1.2em; }
+.articles-wrapper .posted-on {
+  padding-bottom: 1.2em; }
 
 .articles-wrapper .clickthrough {
   position: absolute;
@@ -890,9 +917,13 @@ button.site-nav__btn {
 h1.entry-title {
   font-size: 5em; }
 
-h2.entry-title {
-  font-size: 1.5em;
-  margin: 0.25em 0 1.5em; }
+h2 {
+  font-size: 2.571em;
+  line-height: normal;
+  margin-bottom: .6667em; }
+  h2 .entry-title {
+    font-size: 1.5em;
+    margin: 0.25em 0 1.5em; }
 
 .single .post-main {
   background: #15232a;
@@ -1201,6 +1232,16 @@ h2.entry-title {
   margin: 0 0 1.5em; }
   .widget select {
     max-width: 100%; }
+  .widget .subtitle {
+    color: #f7bf3b;
+    font-size: 1em;
+    letter-spacing: 6px;
+    text-transform: uppercase;
+    padding-bottom: 0;
+    margin-bottom: 0; }
+
+.widget-area {
+  padding-top: 6em; }
 
 /* Media
 --------------------------------------------- */
