--- a/_assets/sass/base/elements/_media.scss
+++ b/_assets/sass/base/elements/_media.scss
@@ -59,6 +59,10 @@ figure {
 
 			img {
 				margin: -7.5% -4px -7.5% 0;
+				-webkit-box-shadow: -10px 10px 15px 0px rgba(0,0,0,1);
+				-moz-box-shadow: -10px 10px 15px 0px rgba(0,0,0,1);
+				box-shadow: -10px 10px 15px 0px rgba(0,0,0,1);
+
 			}
 		}
 	}
