--- a/_assets/sass/components/widgets/_widgets.scss
+++ b/_assets/sass/components/widgets/_widgets.scss
@@ -6,6 +6,12 @@
 		max-width: 100%;
 	}
 
+	.widget-title {
+		font-size: 2.571em;
+		line-height: normal;
+		margin-bottom: .6667em;
+	}
+
 	.subtitle {
 		color: $yellow;
 		font-size: 1em;
